# storage/api-docs/api-docs.json
@@ -1939,6 +1939,67 @@
                 }
             }
         },
+        "/api/paymentProcess": {
+            "post": {
+                "tags": [
+                    "checkOut"
+                ],
+                "summary": "process payment",
+                "description": "this ids final stage for payment i.e like decision",
+                "operationId": "paymentProcess",
+                "parameters": [
+                    {
+                        "name": "status",
+                        "in": "query",
+                        "description": "status of payment if success, fails, or cancelled",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "tx_ref",
+                        "in": "query",
+                        "description": "transaction refference must be unique for each transaction",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    },
+                    {
+                        "name": "transaction_id",
+                        "in": "query",
+                        "description": "id of transaction",
+                        "required": true,
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {}
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad user Input"
+                    },
+                    "401": {
+                        "description": "Unauthenticated"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Resource Not Found"
+                    }
+                }
+            }
+        },
         "/api/size": {
             "get": {
                 "tags": [
